--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Build
       run: |
-        npm install
-        npm run build
+        composer install --no-dev
     - name: WordPress Plugin Deploy
       id: deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
