--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Build
       run: |
-        composer install --no-dev
+        composer install -o --no-dev
     - name: WordPress Plugin Deploy
       id: deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
